Fixed button gaps

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -13,7 +13,7 @@
   --btn-padding: var(--size-v-200) var(--size-v-300);
   --btn-br: 0;
   --btn-td: none;
-  --btn-gap: var(--size-v-300);
+  --btn-gap: var(--size-v-200);
 
   --btn-ff: inherit;
   --btn-fw: inherit;
